@@ -201,5 +201,5 @@ Many thanks too to Judy Brewer of the W3C WAI Team as well as Vivien
 Lacourba of the W3C Systems Team for their involvement and
 facilitating discussions and work on this version of hypermail.
 
-Thanks to Baptiste Daroussin, Jim (@AverageGuy), and @cacsar for their
-bug reports and code contributions.
+Thanks to Baptiste Daroussin, Jim (@AverageGuy), @cacsar, @schlomif,
+and Andy Valencia for their bug reports and code contributions.
